[package]
name = "wombat"
version = "0.1.0"
edition = "2021"
description = "Access services running on your local machine through discord"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = "0.11.0"
diesel = { version = "2.2.4", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "5.0.1"
dotenvy = "0.15.7"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serenity = "0.12.2"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = "1.1.3"
url = "2.5.2"
urlencoding = "2.1.3"
