[package]
name = "wombat"
version = "0.1.0"
edition = "2021"
description = "Access services running on your local machine through discord"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
dotenvy = "0.15.7"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
poise = "0.6.1"
serde = "1.0.210"
serde_json = "1.0.128"
serenity = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
