[package]
name = "wombat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = "0.11.0"
directories = "5.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["server"] }
hyper-util = { version = "0.1.8", features = ["server"] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing-subscriber = "0.3.18"
url = "2.5.2"
wombat-server = { path = "../server" }
