[package]
name = "wombat-server"
version = "0.1.0"
edition = "2021"
description = "Access services running on your local machine through discord"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
bincode = "1.3.3"
diesel = { version = "2.2.4", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serenity = "0.12.2"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
ulid = "1.1.3"
urlencoding = "2.1.3"
